# OAP

./: README.md  package-lock.json  package.json  replit.md
client/src/: App.tsx  index.css
client/src/components/: agent-kit-panel.tsx  analytics-card.tsx  header.tsx  project-card.tsx  sidebar.tsx  theme-provider.tsx
client/src/lib/: api.ts  rust-engine.ts
client/src/pages/: admin-panel.tsx  advanced-analytics.tsx  analysis.tsx  blockchain.tsx  collaboration.tsx  dashboard.tsx  editor.tsx  royalty-calculator.tsx  web3-marketplace.tsx
mobile/: package.json
mobile/src/: App.tsx
rust-engine/: Cargo.toml  build.sh
rust-engine/src/: lib.rs
server/: admin.ts  ai.ts  blockchain.ts  coinbase-agent-kit.ts  coinbase-integration.ts  collaboration.ts  platform-contract.sol  poe-bot.ts  polygon-agglayer.ts  routes.ts  storage.ts  tokenomics.ts  vite.ts  websocket.ts
shared/: schema.ts
