[package]
name = "omniauthor-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
tokio = { version = "1.0", features = ["full"] }
regex = "1.0"
unicode-segmentation = "1.0"
rayon = "1.0"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
opt-level = "s"
lto = true