[package]
name = "omniauthor-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
web-sys = "0.3"
regex = "1.0"
unicode-segmentation = "1.10"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["wasm-bindgen"] }
uuid = { version = "1.0", features = ["v4", "wasm-bindgen"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
opt-level = "s"
lto = true